blog: add type=post for blog pages
So it'll show up in the home page of after-dark theme

--- a/content/blog/1601-grilo-2016.rst.md
+++ b/content/blog/1601-grilo-2016.rst.md
@@ -4,6 +4,7 @@ date     : 2016-06-09T00:42:00+02:00
 slug     : 1601
 tags     : [grilo, gsoc]
 title    : "Grilo updates!"
+type     : "post"
 ---
 
 Nothing like talking about Grilo to keep the blog going and to be honest
